// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.vue correctly 1`] = `
<div class="xy-spin xy-spin-spinning" aria-live="polite" aria-busy="true"><span class="xy-spin-dot xy-spin-dot-spin"><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i></span>
  <!---->
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.vue correctly 1`] = `
<div class="xy-spin xy-spin-spinning" aria-live="polite" aria-busy="true"><span role="img" aria-label="loading" style="font-size: 24px;" class="anticon anticon-loading xy-spin-dot"><svg focusable="false" class="anticon-spin" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="0 0 1024 1024"><path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path></svg></span>
  <!---->
</div>
`;

exports[`renders ./components/spin/demo/delay.vue correctly 1`] = `
<div class="xy-spin-nested-loading">
  <!---->
  <div class="xy-spin-container">
    <div role="alert" class="xy-alert xy-alert-info xy-alert-with-description xy-alert-no-icon" data-show="true">
      <!---->
      <div class="xy-alert-content">
        <div class="xy-alert-message">Alert message title</div>
        <div class="xy-alert-description">Further details about the context of this alert.</div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
<div class="spin-state"> Loading state： <button type="button" role="switch" aria-checked="false" class="xy-switch">
    <div class="xy-switch-handle">
      <!---->
    </div><span class="xy-switch-inner"><span class="xy-switch-inner-checked"><!----></span><span class="xy-switch-inner-unchecked"><!----></span></span>
  </button></div>
`;

exports[`renders ./components/spin/demo/inside.vue correctly 1`] = `
<div class="example">
  <div class="xy-spin xy-spin-spinning" aria-live="polite" aria-busy="true"><span class="xy-spin-dot xy-spin-dot-spin"><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i></span>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.vue correctly 1`] = `
<div class="xy-spin-nested-loading">
  <!---->
  <div class="xy-spin-container">
    <div role="alert" class="xy-alert xy-alert-info xy-alert-with-description xy-alert-no-icon" data-show="true">
      <!---->
      <div class="xy-alert-content">
        <div class="xy-alert-message">Alert message title</div>
        <div class="xy-alert-description">Further details about the context of this alert.</div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
<div class="spin-state"> Loading state： <button type="button" role="switch" aria-checked="false" class="xy-switch">
    <div class="xy-switch-handle">
      <!---->
    </div><span class="xy-switch-inner"><span class="xy-switch-inner-checked"><!----></span><span class="xy-switch-inner-unchecked"><!----></span></span>
  </button></div>
`;

exports[`renders ./components/spin/demo/size.vue correctly 1`] = `
<div class="xy-space xy-space-horizontal xy-space-align-center">
  <div class="xy-space-item" style="margin-right: 8px;">
    <div class="xy-spin xy-spin-sm xy-spin-spinning" aria-live="polite" aria-busy="true"><span class="xy-spin-dot xy-spin-dot-spin"><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i></span>
      <!---->
    </div>
  </div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px;">
    <div class="xy-spin xy-spin-spinning" aria-live="polite" aria-busy="true"><span class="xy-spin-dot xy-spin-dot-spin"><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i></span>
      <!---->
    </div>
  </div>
  <!---->
  <div class="xy-space-item">
    <div class="xy-spin xy-spin-lg xy-spin-spinning" aria-live="polite" aria-busy="true"><span class="xy-spin-dot xy-spin-dot-spin"><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i></span>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`renders ./components/spin/demo/tip.vue correctly 1`] = `
<div class="xy-spin-nested-loading">
  <div>
    <div class="xy-spin xy-spin-spinning xy-spin-show-text" aria-live="polite" aria-busy="true"><span class="xy-spin-dot xy-spin-dot-spin"><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i><i class="xy-spin-dot-item"></i></span>
      <div class="xy-spin-text">Loading...</div>
    </div>
  </div>
  <div class="xy-spin-container xy-spin-blur">
    <div role="alert" class="xy-alert xy-alert-info xy-alert-with-description xy-alert-no-icon" data-show="true">
      <!---->
      <div class="xy-alert-content">
        <div class="xy-alert-message">Alert message title</div>
        <div class="xy-alert-description">Further details about the context of this alert.</div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
